# pointCloudsClassification

./: .gitignore  README.md
cahier_de_suivi/: makefile  templateINSA.sty
cahier_de_suivi/code/: visualisation.cpp
cahier_de_suivi/textes/: seance0.tex
dataset/: dish_area_labels.txt
dataset/dish_area_attributes/: attributes.csv  attributesSmall.csv  attributes_rotate.csv  intensityAttributes.csv  labels.csv  labelsSmall.csv
dataset/lomita_attributes/: attributesSmall_without_unlabeled.csv  attributes_without_unlabeled_and_reduced_background.csv  labelsSmall_without_unlabeled.csv  labels_without_unlabeled_and_reduced_background.csv
matlab/: attributes.m  diminutionDonnees.m  intensityAttributes.m  loadpcd.m  monqp.m  pclviewer.m  rotate.m  savepcd.m  stats.m  svm_train_linear.m  testKmeans.m  testLinearSVMSmall.m  testSVM.m  testSVMSmall.m
matlab/boundingbox/: Thumbs.db  loadpcd.m  mon_bounding_box.m
matlab/dish_area/: Kmoyennes.m
matlab/lomita/: expend_labels.m  get_labels.m  reduce_background_class.m  reduce_background_class_small.m  testKmeans.m  testLinearSVMSmall.m
matlab/pre_processing/: attributes.m  diminutionDonnees.m  stats.m
matlab/resources/: splitdata.m
matlab/svm_gaussian/: svm_predict.m  svm_train.m  testSVM.m  testSVMSmall.m
matlab/svm_linear/: svm_predict_linear.m  testLinearSVMSmall.m
pointclouds/spin_image/: CMakeLists.txt
pointclouds/spin_image_sur_cylindre/: spin_image_sur_cylindre.cpp
rapport/: README.md  makefile  rapport.tex
rapport/textes/: 0_introduction.tex  1_donnees.tex  2_attributs.tex  3_classifieurs.tex  4_PCL.tex  5_Conclusion.tex  6_sources.tex  7_annexes.tex  bibli.bib  seance1.tex  seance2.tex  seance3.tex
tests/essai_segmentation/: planar_segmentation.cpp
tests/essai_segmentation_2/: CMakeLists.txt  region_growing_segmentation.cpp
tests/lecture_data/: pcd_read.cpp  (+1 more)
tests/visualizer_2/: CMakeLists.txt  visualizer_2.cpp
track_tool/: CMakeLists.txt  manifest.xml
track_tool/include/track_tools/: track_manager.h
track_tool/src/: example.cpp  track_manager.cpp
(+160 files in other folders)
